# parity-daemonize

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
examples/: simple.rs
src/: error.rs  lib.rs  pipe.rs
src/platform/: linux.rs  mod.rs  unsupported.rs
tests/: tests.rs
