[package]
name = "daemonize-rs"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/daemonize-rs"
documentation = "https://docs.rs/daemonize-rs"
readme = "README.md"
description = "A more advanced daemonizer"
keywords = ["daemon", "daemonize", "unix"]
categories = ["os::unix-apis"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
libc = "0.2"
failure = "0.1"
log = "0.4"
mio = "0.6"
ansi_term = "0.11"
