[package]
name = "parity-daemonize"
version = "0.1.1"
authors = ["Parity Technologies <admin@parity.io>"]
repository = "https://github.com/paritytech/parity-daemonize"
documentation = "https://docs.rs/parity-daemonize"
readme = "README.md"
description = "A more advanced daemonizer"
keywords = ["daemon", "daemonize", "unix"]
categories = ["os::unix-apis"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
libc = "0.2"
failure = "0.1"
log = "0.4"
mio = "0.6"
ansi_term = "0.11"
